Created a new build script that makes the firmware interactively on the command line
FAN_SOFT_PWM turned on
Improved Bondtech steps per unit
Lower bed current

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ applet/
 *.bak
 *.DS_Store
 *.idea
+AutoBuild/.vs/
+Marlin/Build/
+Marlin/Development/
+AutoBuild/AutoBuild/obj/
+AutoBuild/AutoBuild/bin/
