--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
 default_envs = rambo
 include_dir  = Marlin
-upload_port = COM3
+#upload_port = COM5
 #
 # The 'common' values are used for most Marlin builds
 #
@@ -89,7 +89,7 @@ extra_scripts = ${common.extra_scripts}
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
 monitor_speed = 250000
-upload_port = COM3
+#upload_port = COM3
 monitor_flags =
   --quiet
   --echo
